# researchPipelineRAG

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture-easy-dataset.md  architecture-flashrag.md  data-contract.md
outputs/: README.md
requirements/: flashrag-dense-rerank.txt
scripts/: acquire_demo_scale_sources.py  build_phase7f_source_decisions.py  build_phase7g_source_verification.py  build_phase7i_manual_finalization_packet.py  build_phase7j_human_signoff.py  build_real_pilot_expanded.py  build_real_pilot_medium.py  build_real_pilot_medium_plus.py  create_example_domain.py  export_easy_dataset_example.py  prepare_flashrag_example.py  run_deepseek_real_pilot.py  run_medium_plus_live_subset.py  screen_phase7d_sources.py  verify_flashrag_method_feasibility.py  verify_flashrag_runtime_intake.py
tests/: __init__.py  test_answer_normalizer.py  test_benchmark_runner.py  test_bm25s_retrieval.py  test_calibration_audit.py  test_calibration_packet.py  test_cli.py  test_comparison_report.py  test_deepseek_answer_runner.py  test_deepseek_full_candidate_outputs.py  test_deepseek_judge_runner.py  test_deepseek_pipeline.py  test_deepseek_real_pilot_script.py  test_demo_question_generation.py  test_dense_rerank_readiness.py  test_domain_evaluator.py  test_easy_dataset_adapter.py  test_easy_dataset_integration_assets.py  test_flashrag_adapter.py  test_flashrag_bm25_bridge.py  test_flashrag_method_feasibility.py  test_flashrag_runtime_intake.py  test_full_text_chunk_extraction.py  test_full_text_intake.py  test_hashed_dense_benchmark.py  (+44 more)
(+490 files in other folders)
