[project]
name = "domainrag-bench"
version = "0.1.0"
description = "First milestone implementation for DomainRAG-Bench."
requires-python = ">=3.10"
dependencies = ["bm25s[core]==0.2.1", "pypdf>=5,<6"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["benchmark"]
addopts = "-q"
